@startuml

GeneralPage <|-- MainPage
MainPage <|-- LoginUser
GeneralPage <|-- UserRegistration
LoginUser <|-- UserPage
LoginUser <|-- ArticleEditor
UserPage <|-- UserData

TestMain *-- MainPage
TestRegistration *-- UserRegistration
TestLoginLogout *-- LoginUser
TestUserActions  *-- UserPage
TestNewArticle *-- ArticleEditor
TestUserData *- UserData

class GeneralPage{
browser
url
open()
close()
refresh()
}

class ConduitDatabase{

}
@enduml